# Staleguard

./: .gitignore  Cargo.toml  DETAILS.md  README.md  action.yml
.github/workflows/: ci.yml
docs/: architecture-rules.md  diagram-coherence.md
src/: claim.rs  commands.rs  config.rs  constswap.rs  coverage.rs  entrypoints.rs  evidence.rs  extract.rs  findings.rs  git.rs  judge.rs  main.rs  rerank.rs  retrieve.rs  rules.rs  verify.rs
src/code/: extract.rs  facts.rs  lang.rs  mod.rs  resolve.rs  schema.rs  symbol.rs
src/diagram/: align.rs  class.rs  dot.rs  er.rs  mermaid.rs  mod.rs  plantuml.rs  sequence.rs  state.rs  tests.rs
src/drift/: coupling.rs  ledger.rs  mod.rs  tests.rs
