[package]
name = "doc-aligner"
version = "0.0.1"
edition = "2021"
description = "Sanity-check CLAUDE.md, project docs, and code against each other for coherence drift."
license = "MIT"
readme = "README.md"

[[bin]]
name = "doc-aligner"
path = "src/main.rs"

[dependencies]
clap = { version = "4", features = ["derive"] }
walkdir = "2"
regex = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Layer 2/3 (retrieval + LLM judge) deps land behind a feature flag so the
# deterministic build stays lean and dependency-light:
#   reqwest, serde_json (HTTP to embedding/Anthropic APIs)
#   tree-sitter + grammars (AST facts)
#   ndarray (cosine / top-k)

[profile.release]
strip = true
lto = true
